feat: add scripts/benchmark.sh for one-command FFM vs JNI comparison
- BenchmarkRunner runs both suites via JMH and prints a summary table
- scripts/benchmark.sh handles build + classpath + execution
- exec-maven-plugin wired in benchmarks/pom.xml (alternative entry point)
- AGENTS.md and README updated to document the new command

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>